--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -48,8 +48,9 @@ to the documentation wiki are currently excluded.
 ### git
 
 A git mirror of the trunk of the subversion repository is available at
-<http://ikiwiki.info/ikiwiki.git/.git>. It is updated whenever
-changes are committed to the subversion repository.
+`git://ikiwiki.info/` and also at <http://ikiwiki.info/ikiwiki.git/>.
+It is updated using `git-svnimport` whenever changes are committed to the
+subversion repository.
 
 ### arch
 
