web commit by http://madduck.myopenid.com/: add info on how to reconfigure existing clones

--- a/doc/news/git_move.mdwn
+++ b/doc/news/git_move.mdwn
@@ -1,2 +1,5 @@
 I've redone ikiwiki's git gateway. Hopefully it will work better now. The
 urls to the git repository have changed, see [[download]]. --[[Joey]]
+
+Run `git config remote.origin.url http://ikiwiki.info/ikiwiki.git` to let your
+existing clones know about the new location. --[[madduck]]
