--- a/doc/news/git_move.mdwn
+++ b/doc/news/git_move.mdwn
@@ -1,5 +1,6 @@
 I've redone ikiwiki's git gateway. Hopefully it will work better now. The
 urls to the git repository have changed, see [[download]]. --[[Joey]]
 
-Run `git config remote.origin.url http://ikiwiki.info/ikiwiki.git` to let your
-existing clones know about the new location. --[[madduck]]
+Run `git config remote.origin.url git://ikiwiki.info/` (or `git config
+remote.origin.url http://ikiwiki.info/ikiwiki.git`) to let your existing
+clones know about the new location. --[[madduck]]
