--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -128,17 +128,18 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
 
 			REPO=~/wiki.git
 			cd $SRCDIR
-			mv .ikiwiki ..
 			git init
 			echo .ikiwiki > .gitignore
 			git add .
 			git commit -m'Initial commit'
-			# stop git performing fast forwards -- this is to avoid
-			# overwriting the remote ref and losing other peoples'
-			# commits from there.
+			# if you expect $REPO to receive pushs from multiple
+			# clones, then it is advisable to stop git performing
+			# fast forwards -- this is to avoid overwriting the
+			# remote ref and losing commits from there.
 			git config receive.denyNonFastForwards true
 			git config core.bare true
 			mv .git $REPO
+			mv .ikiwiki ..
 			cd ..
 			rm -r $SRCDIR
 			git clone -l -s $REPO $SRCDIR
