--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.9) UNRELEASED; urgency=low
+ikiwiki (2.9) unstable; urgency=low
 
   * Fix copyright and licence styling.
   * tag: Add taglink preprocessor directive, supporting visible tag links.
@@ -22,7 +22,7 @@ ikiwiki (2.9) UNRELEASED; urgency=low
   * camelcase: Tighten regexp to avoid false positives. WikiWords are only
     linkified now if they are preceeded by whitespace.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 28 Sep 2007 16:45:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Sep 2007 15:07:24 -0400
 
 ikiwiki (2.8) unstable; urgency=low
 
