--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -134,17 +134,19 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
 			git add .
 			git commit -m'Initial commit'
 			# if you expect $REPOSITORY to receive pushs from multiple
-			# clones, then it is advisable to stop git performing
-			# fast forwards -- this is to avoid overwriting the
-			# remote ref and losing commits from there.
+			# clones, then it is advisable to only accept fast
+			# forwards -- this is to avoid overwriting the remote
+			# ref and losing commits from there.
 			git config receive.denyNonFastForwards true
 			git config core.bare true
 			mv .git $REPOSITORY
-			mv .ikiwiki ..
+			# we want to preserve the current .ikiwiki directory,
+			# so temporarily move it to a safe location
+			mv .ikiwiki ../ikiwiki.sv
 			cd ..
 			rm -r $SRCDIR
 			git clone -l -s $REPOSITORY $SRCDIR
-			mv .ikiwiki $SRCDIR
+			mv ikiwiki.sv $SRCDIR/.ikiwiki
 
 	It is **paramount** that you **never** push to the Git repository in
 	`$SRCDIR` ([this FAQ entry explains
