--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -234,6 +234,9 @@ easily, perl is possible (but I'm not strong in perl).
 >> Thanks for an excellent Xmas present, I will appreciate the additional 
 >> users this will help switch to ikiwiki! --[[Joey]]
 
+>> Sounds great indeed. Learning from [here](http://www.bddebian.com/~wiki/AboutTheTWikiToIkiwikiConversion/) that HTML::WikiConverter needed for your conversion was not up-to-date on Debian I have now done an unofficial package, including your proposed Markdown patches, apt-get'able at <pre>deb http://debian.jones.dk/ sid wikitools</pre>
+>> -- [[JonasSmedegaard]]
+
 ----
 
 # LaTeX support?
