propose alternate git setup instructions

--- a/doc/setup/discussion.mdwn
+++ b/doc/setup/discussion.mdwn
@@ -9,6 +9,7 @@ they import. --Ethan
 > I've switched to a different method that preserves .ikiwiki, w/o checking
 > it in. --[[Joey]]
 
+----
 
 These instructions should probably show how to use a bare Git repository
 (`GIT_DIR=somewhere.git git-init-db`) rather than a repository with a full
@@ -26,6 +27,25 @@ directory back into the wiki's working copy directory, isn't it? --[[tschwinge]]
 
 >> Either you do it or I'll do it somewhen soon.  --[[tschwinge]]
 
+----
+
 Curious as to why support for CVS is not built in. --[[Luther]]
 
 > See [[todo/CVS_backend|todo/CVS_backend]], but you might consider switching to a better version control system. --[[JoshTriplett]]
+
+----
+
+On the git setup instuctions, I wonder if this wouldn't work as well and be
+simplete? --[[Joey]]
+
+	mkdir $REPOSITORY
+	cd $REPOSITORY
+	git --bare init --shared
+	mv $SRCDIR $SRCDIR.old
+	git clone -l -s $REPOSITORY $SRCDIR
+	cd $SRCDIR
+	echo /.ikiwiki > .gitignore
+	mv $SRCDIR.old/* $SRCDIR.old/.* .
+	rmdir $SRDDIR.old
+	git add .
+	git commit -m "initial commit"
