--- a/doc/setup/discussion.mdwn
+++ b/doc/setup/discussion.mdwn
@@ -38,15 +38,16 @@ Curious as to why support for CVS is not built in. --[[Luther]]
 On the git setup instuctions, I wonder if this wouldn't work as well and be
 simpler? --[[Joey]]
 
+	REPOSITORY=~/wiki.git
 	mkdir $REPOSITORY
 	cd $REPOSITORY
 	git --bare init --shared
 	mv $SRCDIR $SRCDIR.old
-	git clone -l -s $REPOSITORY $SRCDIR
+	git clone $REPOSITORY $SRCDIR
 	cd $SRCDIR
 	echo /.ikiwiki > .gitignore
 	mv $SRCDIR.old/* $SRCDIR.old/.* .
 	rmdir $SRDDIR.old
 	git add .
 	git commit -m "initial commit"
-	git push $REPOSITORY master
+	git push
