--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -128,25 +128,17 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
 	to do the following, but this might be easiest:
 
 			REPOSITORY=~/wiki.git
+			mkdir $REPOSITORY
+			cd $REPOSITORY
+			git --bare init --shared
 			cd $SRCDIR
 			git init
 			echo /.ikiwiki > .gitignore
 			git add .
-			git commit -m'Initial commit'
-			# if you expect $REPOSITORY to receive pushs from multiple
-			# clones, then it is advisable to only accept fast
-			# forwards -- this is to avoid overwriting the remote
-			# ref and losing commits from there.
-			git config receive.denyNonFastForwards true
-			git config core.bare true
-			mv .git $REPOSITORY
-			# we want to preserve the current .ikiwiki directory,
-			# so temporarily move it to a safe location
-			mv .ikiwiki ../ikiwiki.sv
-			cd ..
-			rm -r $SRCDIR
-			git clone -l -s $REPOSITORY $SRCDIR
-			mv ikiwiki.sv $SRCDIR/.ikiwiki
+			git commit -m "initial commit"
+			git remote add origin $REPOSITORY
+			git config branch.master.merge refs/heads/master
+			git push --all
 
 	It is **paramount** that you **never** push to the Git repository in
 	`$SRCDIR` ([this FAQ entry explains
