web commit by http://chris-lamb.co.uk/

--- a/doc/todo/git-rev-list_requires_relative_path___40__fixes_git_ctime__41__.mdwn
+++ b/doc/todo/git-rev-list_requires_relative_path___40__fixes_git_ctime__41__.mdwn
@@ -12,3 +12,5 @@
  	 	# Ignore error since a non-existing file might be given.
  	 	my ($sha1) = run_or_non('git-rev-list', '--max-count=1', 'HEAD', $file);
  	 	if ($sha1) {
+
+[[tag patch]]
