* Tidy ctime debug output for git.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.10) UNRELEASED; urgency=low
+
+  * Tidy ctime debug output for git.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 04 Oct 2007 04:59:51 -0400
+
 ikiwiki (2.9) unstable; urgency=low
 
   * Fix copyright and licence styling.
