web commit by JeremyReed: escape underscore

--- a/doc/pagespec/discussion.mdwn
+++ b/doc/pagespec/discussion.mdwn
@@ -31,6 +31,6 @@ source/index.mdwn
 
 My webpages to lock are:
 
-public_html/downloads/index.html
-public_html/index.html
+public\_html/downloads/index.html
+public\_html/index.html
 
