web commit by JeremyReed: I found a fix -- reply to myself

--- a/doc/pagespec/discussion.mdwn
+++ b/doc/pagespec/discussion.mdwn
@@ -34,3 +34,13 @@ My webpages to lock are:
 public\_html/downloads/index.html
 public\_html/index.html
 
+> So I tried again with using "or" instead of "and":
+>
+> index or downloads
+>
+> And that worked. I now get a message saying it is locked and cannot be edited.
+> To me saying "lock both 'index and downloads'" made sense while now it reads like: "lock either 'index or downloads'". Maybe the [[PageSpec]] should define "and" and "or" (beyond the examples it has).
+>
+> Also why did my "/index and /downloads" prevent editing the index by repeatedly showing login webpage?
+>
+> -JeremyReed
