--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -1,6 +1,8 @@
 This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
+Creating a new page: [[Sand_Notes]]
+
 Test. Chinese. 我是中国人，泰山、黄河。
 
 testing openid ... ignore.
