--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -3,6 +3,8 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 ----
 Creating a new page: [[Sand_Notes]]
 
+Test. Korean. 나는 한국인, 백두산,동해
+
 Test. Chinese. 我是中国人，泰山、黄河。
 
 testing openid ... ignore.
