web commit by JonasSmedegaard: Fix typo

--- a/doc/plugins/map.mdwn
+++ b/doc/plugins/map.mdwn
@@ -8,7 +8,7 @@ This plugin generates a hierarchical page map for the wiki. Example usage:
 If the pages to include are not specified, all pages (and other files) in
 the wiki are mapped.
 
-Hint: To limit the map to displaying pages less than a certian level deep,
+Hint: To limit the map to displaying pages less than a certain level deep,
 use a [[PageSpec]] like this: `pages="* and !*/*/*"`
 
 [[if test="enabled(map)" then="""
