web commit by JonasSmedegaard: Fix typo.

--- a/doc/tips/howto_avoid_flooding_aggregators.mdwn
+++ b/doc/tips/howto_avoid_flooding_aggregators.mdwn
@@ -14,7 +14,7 @@ This can happen in a lot of situations:
 * Perhaps you've just moved stuff around in your wiki.
 
 To avoid annoying readers in these situations, it's a good idea to remove
-and existing items from your blog's news feed. That way only new items will
+any existing items from your blog's news feed. That way only new items will
 show up in the aggregator. The best way to do this is to add a `feedpages`
 parameter to the `inline` directive for your blog, with a condition such as:
 
