web commit by MichaleR: added suggestion to add synopsis for plugin list entries

--- a/doc/plugins/discussion.mdwn
+++ b/doc/plugins/discussion.mdwn
@@ -5,3 +5,19 @@ I have seen a few requests on discussion pages, but not any place specific I thi
 --JeremyReed
 
 > [[todo/plugin]] has a list of stuff, moved yours there. --[[Joey]]
+
+It would be nice if the page gave a brief synopsis for each plugin.  For example:
+
+>headinganchors  
+>Adds IDs to all headings based on their text.  
+>Posted Thu, 09 Aug 2007 02:34:19 -0400  
+
+>pagetemplate  
+>Inserts page text into chosen template with the template controlling the look and feel.  
+>Posted Thu, 26 Jul 2007 16:50:58 -0400  
+
+>graphviz  
+>Allows embedding of graphviz graphs.  
+>Posted Mon, 09 Apr 2007 05:09:04 -0400   
+
+--MichaelRasmussen
