web commit by http://madduck.myopenid.com/: added git pitfalls link

--- a/doc/rcs/git.mdwn
+++ b/doc/rcs/git.mdwn
@@ -12,5 +12,6 @@ Links:
 
 * [[Editing_wiki_pages_manually_with_git|GitManual]]
 * [HOWTO: ikiwiki + git][howto]
+* Common [[Git pitfalls]] when using Git with Ikiwiki
 
 [howto]: http://fob.po8.org/node/346
