* French translation update. Closes: #445923 * Fix --get-ctime with git, needed to remove srcdir from filename.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 ikiwiki (2.10) UNRELEASED; urgency=low
 
   * Tidy ctime debug output for git.
+  * French translation update. Closes: #445923
+  * Fix --get-ctime with git, needed to remove srcdir from filename.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 04 Oct 2007 04:59:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 10 Oct 2007 14:14:18 -0400
 
 ikiwiki (2.9) unstable; urgency=low
 
