--- a/doc/pagespec/discussion.mdwn
+++ b/doc/pagespec/discussion.mdwn
@@ -44,3 +44,9 @@ public\_html/index.html
 > Also why did my "/index and /downloads" prevent editing the index by repeatedly showing login webpage?
 >
 > -JeremyReed
+
+>> I've clarified and/or in [[PageSpec]].
+>> 
+>> I can't reproduce "/index and /downloads" causing the login webpage to
+>> be shown repeatedly. Sure you weren't having some independent issue with
+>> logging in? --[[Joey]]
