web commit by http://subvert.org.uk/~bma/: link to patch.

--- a/doc/todo/meta_rcsid.mdwn
+++ b/doc/todo/meta_rcsid.mdwn
@@ -30,3 +30,5 @@ of CVS/SVN-style keywords (like '$Id$', etc.) from the source file in the page t
         
         if ($page ne $destpage &&
             ((exists $license{$page}   && ! exists $license{$destpage}) ||
+
+[[patch]]
