web commit by http://subvert.org.uk/~bma/: reasoning.

--- a/doc/todo/meta_rcsid.mdwn
+++ b/doc/todo/meta_rcsid.mdwn
@@ -15,6 +15,9 @@ of CVS/SVN-style keywords (like '$Id$', etc.) from the source file in the page t
 > And then use a stylesheet to display it as desired.
 > --[[Joey]]
 
+>> That's possibly true; my reasoning was that I wanted it to be more independent 
+>> of the page content, and independent of any stylesheet.
+
     --- meta.pm.orig    2007-10-10 19:57:04.000000000 +0100
     +++ meta.pm 2007-10-10 20:07:37.000000000 +0100
     @@ -13,6 +13,7 @@
