failed to reproduce

--- a/doc/bugs/cgi_does_not_use_templatedir_overlay.mdwn
+++ b/doc/bugs/cgi_does_not_use_templatedir_overlay.mdwn
@@ -5,3 +5,10 @@ I have set
 in ikiwiki.setup and put a custom ``page.tmpl`` in there, then called ``ikiwiki --setup`` and verified that it works. It even works when I push to the Git repo and let the receive-hook update the wiki.
 
 However, when I make a change via the CGI (which has been created by the last setup run), it applies the default ``page.tmpl`` file to all pages it updates.
+
+> Hmm, I tried to reproduce this, but failed, my modified template was used
+> both during the --setup and for cgi edits.
+> 
+> Are you 100% sure that your ikiwiki.cgi is right? Try:
+>	strings ikiwiki.cgi |grep templatedir
+> --[[Joey]]
