--- a/doc/todo/rst_plugin_python_rewrite.mdwn
+++ b/doc/todo/rst_plugin_python_rewrite.mdwn
@@ -3,3 +3,5 @@ rendered. Now that ikiwiki supports plugins written in
 [[other_languages|plugins/write/external]], it would be excellent if someone
 could rewrite the rst plugin as a pure python external plugin. It would
 then run nice and quick.
+
+[[done]], thanks to madduck!
