--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,12 @@ ikiwiki (2.10) UNRELEASED; urgency=low
   * Add a "createlink" class attribute to the span for wikilinks pointing
     to not-yet-existing pages. I don't have a useful style defined for that
     though.
+  * Rewritten rst plugin by madduck is a python program that communicates with
+    ikiwiki via XML RPC. This should be much faster than the old plugin that
+    had to fork python for every rst page render. Note that if you use
+    the rst plugin, you now need to have the RPC::XML perl module installed.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 13 Oct 2007 19:05:42 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 15 Oct 2007 12:20:15 -0400
 
 ikiwiki (2.9) unstable; urgency=low
 
