--- a/doc/plugins/rst.mdwn
+++ b/doc/plugins/rst.mdwn
@@ -1,11 +1,10 @@
-[[template id=plugin name=rst author="Sergio Talens-Oliag"]]
+[[template id=plugin name=rst author="martin f. krafft"]]
 [[tag type/format]]
-[[tag type/slow]]
 
 This plugin lets ikwiki convert files with names ending in ".rst" to html.
 It uses the [reStructuredText](http://docutils.sourceforge.net/rst.html)
-markup syntax. You need to have the python-docutils module installed to use
-it.
+markup syntax. You need to have [[cpan RPC::XML]], python and the
+python-docutils module installed to use it.
 
 Note that this plugin does not interoperate very well with the rest of
 ikiwiki. Limitations include:
@@ -13,9 +12,6 @@ ikiwiki. Limitations include:
 * There are issues with inserting raw html into documents, as ikiwiki 
   does with [[WikiLinks|WikiLink]] and many 
   [[PreprocessorDirectives|PreprocessorDirective]].
-* It's slow; it forks a copy of python for each page. While there is a
-  perl version of the reStructuredText processor, it is not being kept in
-  sync with the standard version, so is not used.
 
 So while you may find this useful for importing old files into your wiki,
 using this as your main markup language in ikiwiki isn't recommended at
