--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -90,6 +90,6 @@ directive:
   matches by that value are included, but some of those can be excluded by
   specifying a tighter [[PageSpec]] here.
 * `feedshow` - Specify the maximum number of matching pages to include in
-  the rss/atom feeds. The default is the same as the `show` value above,
+  the rss/atom feeds. The default is the same as the `show` value above.
 * `feedonly` - Only generate the feed, do not display the pages inline on
   the page.
