web commit by http://roktas.myopenid.com/: add pcc project

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -23,6 +23,7 @@ Projects
 * The [netconf project](http://netconf.alioth.debian.org)
 * The [Debian Packaging Handbook project](http://packaging-handbook.alioth.debian.org/wiki/)
 * The [libkdtree project](http://libkdtree.alioth.debian.org)
+* The [pcc](http://pcc.ludd.ltu.se/) (Portable C Compiler) project.  (Simple rcs backend)
 
 Personal sites and blogs
 ========================
