--- a/doc/bugs/cgi_does_not_use_templatedir_overlay.mdwn
+++ b/doc/bugs/cgi_does_not_use_templatedir_overlay.mdwn
@@ -6,9 +6,17 @@ in ikiwiki.setup and put a custom ``page.tmpl`` in there, then called ``ikiwiki 
 
 However, when I make a change via the CGI (which has been created by the last setup run), it applies the default ``page.tmpl`` file to all pages it updates.
 
-> Hmm, I tried to reproduce this, but failed, my modified template was used
-> both during the --setup and for cgi edits.
+> This issue can arise in at least two ways:
 > 
-> Are you 100% sure that your ikiwiki.cgi is right? Try:
->	strings ikiwiki.cgi |grep templatedir
-> --[[Joey]]
+> 1. A permissions problem with the templatedir that prevents ikiwiki from
+>    accessing it. If it can't access it, it silently falls back to using
+>    templates from the default directory.
+> 2. A templatedir that doesn't have an absolute path. In this case ikiwiki
+>    will look relative to *somewhere*, which will sometimes work and
+>    sometimes not. Clearly not a good idea.
+>
+> So far that's the only ways that I can see that this could happen.
+> It would be possible to make ikiwiki try to detect these sorts of
+> problems; it could check if the templatedir exists, and check that it's
+> readable. This would add some extra system calls to every ikiwiki run,
+> and I'm not convinced it's worth it. --[[Joey]]
