* Danish translation from Jonas Smedegaard. Closes: #446952

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,9 @@ ikiwiki (2.10) UNRELEASED; urgency=low
     ikiwiki via XML RPC. This should be much faster than the old plugin that
     had to fork python for every rst page render. Note that if you use
     the rst plugin, you now need to have the RPC::XML perl module installed.
+  * Danish translation from Jonas Smedegaard. Closes: #446952
 
- -- Joey Hess <joeyh@debian.org>  Mon, 15 Oct 2007 12:20:15 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 16 Oct 2007 17:53:52 -0400
 
 ikiwiki (2.9) unstable; urgency=low
 
