web commit by JonasSmedegaard: Added note about danish l10n of templates and basewiki.

--- a/doc/todo/l10n.mdwn
+++ b/doc/todo/l10n.mdwn
@@ -59,3 +59,10 @@ maintain a separate utility.
 As to the hardcoded strings in ikiwiki, I've internationalized the program,
 and there is a po/ikiwiki.pot in the source that can be translated.
 --[[Joey]]
+
+----
+
+Danish l10n of templates and basewiki is available at http://source.jones.dk/
+(using GIT - do `git clone <url> && cd <dir> && git checkout master_danish`
+for each of the repositories)
+--[[JonasSmedegaard]]
